--- a/style.css
+++ b/style.css
@@ -124,3 +124,7 @@ footer {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 10px;
 }
+.water-drop.bad-drop {
+  background-color: #27ae60 !important;
+  border: 2px solid #145a32;
+}
