--- a/style.css
+++ b/style.css
@@ -128,3 +128,11 @@ footer {
   background-color: #27ae60 !important;
   border: 2px solid #145a32;
 }
+#touchControls {
+  display: none;
+}
+@media (pointer: coarse) {
+  #touchControls {
+    display: flex;
+  }
+}
